...
        }
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        title = "Map"
        tabBarItem.image = AppDelegate.exploreMapImage

        locationManager.delegate = self
        locationManager.requestWhenInUseAuthorization()
        locationManager.startUpdatingLocation()

...
